--- a/Assignment-page1.html
+++ b/Assignment-page1.html
@@ -1,91 +1,158 @@
 <!DOCTYPE html>
 <html>
-    <!-- Assignment1 - Mazen Al-Jehani - 1406094 -->
-    <head>
-        <meta charset="UTF-8">
-        <title>TechNews</title>
+<!-- Assignment1 - Mazen Al-Jehani - 1406094 -->
 
-        <p>
-            <a href="https://www.google.com.sa/">TNews</a>  | 10/02/2017 |  <a href="https://www.google.com.sa/">News</a> |
-              <a href="https://www.google.com.sa/">Comments</a> |  <a href="https://www.google.com.sa/">Show</a> | 
-              <a href="https://www.google.com.sa/">Ask</a> |  <a href="https://www.google.com.sa/">Jobs</a> | 
-              <a href="https://www.google.com.sa/">Submit News</a> 
-        </p>
-    </head>
-    <body>
-       <h1>Main Stories</h1> 
-       <ul>
-           <li><a href="https://www.google.com.sa/">Yarn - A new package manager for JavaScript</a>
-               <ul>
-                   <li>1 hour ago | 20 comments</li>
-               </ul>
-           </li>
-           <li><a href="https://www.google.com.sa/">Tesseractjs - Pure JavaScript OCR for 60 Languages</a>
-            <ul>
-                <li>2 hours ago | 346 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">Blueprint - A React UI toolkit for the web</a>
-            <ul>
-                <li>4 hours ago | 183 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">Introducing Create React Native App</a>
-            <ul>
-                <li>1 day ago | 55 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">Cheatsheet for the modern JavaScript</a>
-            <ul>
-                <li>2 days ago | 2 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">WalmartLabs rmensources its tool for bringing React Native to mobile apps</a>
-            <ul>
-                <li>2 days ago | 220 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">Build Go programs that run directly on the Xen hyperwisor</a>
-            <ul>
-                <li>2 days ago | 102 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">A new upstream project to break up Docker into independent components</a>
-            <ul>
-                <li>1 week ago | 39 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">AWS 53 open source alternative written in Go</a>
-            <ul>
-                <li>1 week ago | 29 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">TcnsorFlow: open-source. library for machine intelligence</a>
-            <ul>
-                <li>1 week ago | 98 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">Python moved to GitHub</a>
-            <ul>
-                <li>2 weeks ago | 25 comments</li>
-            </ul>
-        </li>
-        <li><a href="https://www.google.com.sa/">Machine Learning Cheat Sheet (for scikit-learn) </a>
-            <ul>
-                <li>2 weeks ago | 190 comments</li>
-            </ul>
-        </li>
-       </ul>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css-Page-1.css">
+    <title>TechNews</title>
+</head>
 
-       <hr>
+<body>
+    <div class="ddo">
+        <ul class="GPar-ul">
+            <li class="Par-li par-li-a frist">
+                <a class="par-li-a" href="https://www.google.com.sa/">
+                    <i class="fa fa-home" style="font-size:150%; color:rgb(255, 255, 255);"></i> TNews</a>
+            </li>
+            <li class="Par-li par-li-a x">
+                <a class="par-li-a" href="https://www.google.com.sa/">News</a>
+            </li>
+            <li class="Par-li par-li-a x">
+                <a class="par-li-a" href="https://www.google.com.sa/">Comments</a>
+            </li>
+            <li class="Par-li par-li-a x">
+                <a class="par-li-a" href="https://www.google.com.sa/">Show</a>
+            </li>
+            <li class="Par-li par-li-a x">
+                <a class="par-li-a" href="https://www.google.com.sa/">Ask</a>
+            </li>
+            <li class="Par-li par-li-a x">
+                <a class="par-li-a" href="https://www.google.com.sa/">Jobs</a>
+            </li>
+            <li class="Par-li par-li-a x">
+                <a class="par-li-a" href="https://www.google.com.sa/">Submit News</a>
+            </li>
+        </ul>
 
-       <p></p>
-       <center> &copy; 2017 RN Inc. All Rights Reserved.</center>
-       <p></p>
-       <center> <a href="https://www.google.com.sa/">Privacy</a>  | <a href="https://www.google.com.sa/">Terms of Use</a>  |
-                <a href="https://www.google.com.sa/">Contact</a>  </center>
+        <div class="hrdi2">
+            <p class="tit"> Main Stories</p>
+            <time>10/02/2017</time>
+        </div>
+
+        <ul class="noList">
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Yarn - A new package manager for JavaScript</a>
+                <ul class="noList">
+                    <li>
+                        <span>1 hour ago</span> | 20 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Tesseractjs - Pure JavaScript OCR for 60 Languages</a>
+                <ul class="noList">
+                    <li>
+                        <span>2 hours ago</span> | 346 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Blueprint - A React UI toolkit for the web</a>
+                <ul class="noList">
+                    <li>
+                        <span>4 hours ago</span> | 183 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Introducing Create React Native App</a>
+                <ul class="noList">
+                    <li>
+                        <span>1 day ago</span> | 55 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Cheatsheet for the modern JavaScript</a>
+                <ul class="noList">
+                    <li>
+                        <span>2 days ago</span> | 2 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; WalmartLabs rmensources its tool for bringing React Native to mobile apps</a>
+                <ul class="noList">
+                    <li>
+                        <span>2 days ago</span> | 220 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Build Go programs that run directly on the Xen hyperwisor</a>
+                <ul class="noList">
+                    <li>
+                        <span>2 days ago</span> | 102 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; A new upstream project to break up Docker into independent components</a>
+                <ul class="noList">
+                    <li>
+                        <span>1 week ago</span> | 39 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; AWS 53 open source alternative written in Go</a>
+                <ul class="noList">
+                    <li>
+                        <span>1 week ago</span> | 29 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; TcnsorFlow: open-source. library for machine intelligence</a>
+                <ul class="noList">
+                    <li>
+                        <span>1 week ago</span> | 98 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Python moved to GitHub</a>
+                <ul class="noList">
+                    <li>
+                        <span>2 weeks ago</span> | 25 comments</li>
+                </ul>
+            </li>
+            <li class="lineB x2">
+                <a class="stA" href="https://www.google.com.sa/">
+                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Machine Learning Cheat Sheet (for scikit-learn) </a>
+                <ul class="noList">
+                    <li>
+                        <span>2 weeks ago</span> | 190 comments</li>
+                </ul>
+            </li>
+        </ul>
+
+        <div class="hrdi"></div>
+
         <p></p>
-        <center>Written in pure HTML | Hosted by: <a href="https://www.google.com.sa/">Heroku</a></center>
+        <div class="cen">
+            <p>&copy; 2017 RN Inc. All Rights Reserved.</p>
+            <p>
+                <a class="fonA" href="https://www.google.com.sa/">Privacy</a> |
+                <a class="fonA" href="https://www.google.com.sa/">Terms of Use</a> |
+                <a class="fonA" href="https://www.google.com.sa/">Contact</a>
+            </p>
+        </div>
 
-    </body>
+    </div>
+</body>
+
 </html>
