--- a/Assignment-page3.html
+++ b/Assignment-page3.html
@@ -3,25 +3,23 @@
     <!-- Assignment1 - Mazen Al-Jehani - 1406094 -->
     <head>
             <meta charset="UTF-8">
+            <link rel="stylesheet" href="css-Page-3.css">
             <title>Submit news</title>
     </head>
     <body>
+        <div>
         <h1>Submit</h1>
         <form>
                 <label>Title:</label>
-                <input type="text">
-                <p></p>
+                <input class="in in2 in3 mar" type="text">
                 <label>URL:</label>
-                <input type="url">
-                <p></p>
-                <p><b>or</b></p>
-                <p></p>
+                <input class="in in2 in3 mar" type="url">
+                <p>or</p>
                 <label>Text:</label>
-                <textarea name="text" cols="36" rows="4"></textarea>
-                <p></p>
-                <input type="submit" value="Submit">
+                <textarea class="in mar hh" name="text" cols="36" rows="4"></textarea>
+                <input class="sub" type="submit" value="Submit">
 
         </form>
-        
+    </div>
     </body>
 </html>
