--- a/Assignment-page2.html
+++ b/Assignment-page2.html
@@ -3,18 +3,20 @@
     <!-- Assignment1 - Mazen Al-Jehani - 1406094 -->
     <head>
          <meta charset="UTF-8">
+         <link rel="stylesheet" href="css-Page-2.css">
          <title>Getting Started with Node.js</title>
     </head>
     <body>
+            <div>
         <h1>Getting Started with Node.js</h1>
         <h2>Installation:</h2>
         <h3>Windows</h3>
         <p>Download the Windows Installer directly from <a href="https://www.google.com.sa/">nodejs.or</a></p>
         <h4>macOS</h4>
-        <p>brew install node</p>
-        <p><b>Linux</b></p>
-        <p><b>Debian and Ubuntu based Linux distributions:</b></p>
-        <p>curl -sL https : //deb. nodesource .com/setup_6.x &nbsp; | &nbsp; sudo -E bash - sudo apt-get install -y nodejs</p>
+        <p class="backdropFP">brew install node</p>
+        <p class="bb">Linux</p>
+        <p class="bb">Debian and Ubuntu based Linux distributions:</p>
+        <p class="backdropFP">curl -sL https : //deb. nodesource .com/setup_6.x &nbsp; | &nbsp; sudo -E bash - sudo apt-get install -y nodejs</p>
         <h3>Guides</h3>
         <p>Articles and tutorails about Node.js are <a href="https://www.google.com.sa/">available here</a></p>
         <h3>Looking for guides of previous Nodejs releases?</h3>
@@ -25,21 +27,25 @@
             </tr>
             <tr>
                 <td>Node.js 5.x</td>
+                <td><a href="https://www.google.com.sa/">Node.js 5.x Guide</a></td>
             </tr>
             <tr>
                 <td>Node.js 4.x</td>
+                <td><a href="https://www.google.com.sa/">Node.js 4.x Guide</a></td>
             </tr>
             <tr>
                 <td>Node.js 0.12</td>
+                <td><a href="https://www.google.com.sa/">Node.js 0.12 Guide</a></td>
             </tr>
             <tr>
                 <td>Node.js 0.10</td>
+                <td><a href="https://www.google.com.sa/">Node.js 0.10 Guide</a></td>
             </tr>
             <tr>
                     <td>All other versions</td>
                     <td><a href="https://www.google.com.sa/">Node 0.x</a></td>
             </tr>
         </table>
-
+      </div>
     </body>
 </html>
