--- a/Assignment-page1.html
+++ b/Assignment-page1.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<!-- Assignment1 - Mazen Al-Jehani - 1406094 -->
 
 <head>
     <meta charset="UTF-8">
@@ -39,105 +38,16 @@
         <div class="hrdi2">
             <p class="tit"> Main Stories</p>
             <time>10/02/2017</time>
+            
+            <select id="bySelect">
+                <option value="likes" selected>Likes</option>
+                <option value="comments">comments</option>
+                <option value="Newest">Newest</option>
+            </select>
         </div>
 
-        <ul class="noList">
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Yarn - A new package manager for JavaScript</a>
-                <ul class="noList">
-                    <li>
-                        <span>1 hour ago</span> | 20 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Tesseractjs - Pure JavaScript OCR for 60 Languages</a>
-                <ul class="noList">
-                    <li>
-                        <span>2 hours ago</span> | 346 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Blueprint - A React UI toolkit for the web</a>
-                <ul class="noList">
-                    <li>
-                        <span>4 hours ago</span> | 183 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Introducing Create React Native App</a>
-                <ul class="noList">
-                    <li>
-                        <span>1 day ago</span> | 55 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Cheatsheet for the modern JavaScript</a>
-                <ul class="noList">
-                    <li>
-                        <span>2 days ago</span> | 2 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; WalmartLabs rmensources its tool for bringing React Native to mobile apps</a>
-                <ul class="noList">
-                    <li>
-                        <span>2 days ago</span> | 220 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Build Go programs that run directly on the Xen hyperwisor</a>
-                <ul class="noList">
-                    <li>
-                        <span>2 days ago</span> | 102 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; A new upstream project to break up Docker into independent components</a>
-                <ul class="noList">
-                    <li>
-                        <span>1 week ago</span> | 39 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; AWS 53 open source alternative written in Go</a>
-                <ul class="noList">
-                    <li>
-                        <span>1 week ago</span> | 29 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; TcnsorFlow: open-source. library for machine intelligence</a>
-                <ul class="noList">
-                    <li>
-                        <span>1 week ago</span> | 98 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Python moved to GitHub</a>
-                <ul class="noList">
-                    <li>
-                        <span>2 weeks ago</span> | 25 comments</li>
-                </ul>
-            </li>
-            <li class="lineB x2">
-                <a class="stA" href="https://www.google.com.sa/">
-                    <i class="fa fa-angle-up" style="font-size:30px;color:rgb(0, 0, 0);"></i> &nbsp; Machine Learning Cheat Sheet (for scikit-learn) </a>
-                <ul class="noList">
-                    <li>
-                        <span>2 weeks ago</span> | 190 comments</li>
-                </ul>
-            </li>
+        <ul id="ulpar" class="noList">
+
         </ul>
 
         <div class="hrdi"></div>
@@ -153,6 +63,7 @@
         </div>
 
     </div>
+    <script src="JC-Page-1.js"></script>
 </body>
 
 </html>
