--- a/Assignment-page2.html
+++ b/Assignment-page2.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <!-- Assignment1 - Mazen Al-Jehani - 1406094 -->
-    <head>
-         <meta charset="UTF-8">
-         <link rel="stylesheet" href="css-Page-2.css">
-         <title>Getting Started with Node.js</title>
-    </head>
-    <body>
-            <div>
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css-Page-2.css">
+    <title>Getting Started with Node.js</title>
+</head>
+
+<body>
+
+
+    <div>
+        <a id="click1" href="">
+            <i id="up" class="fa fa-angle-up" style="font-size: 30px;color: grey;"></i>
+        </a>
+        <p id="likes">2999</p>
+        <a id="click2" href="">
+            <i id="down" class="fa fa-angle-down" style="font-size: 30px;color: grey;"></i>
+        </a>
+    </div>
+
+    <div>
         <h1>Getting Started with Node.js</h1>
         <h2>Installation:</h2>
         <h3>Windows</h3>
-        <p>Download the Windows Installer directly from <a href="https://www.google.com.sa/">nodejs.or</a></p>
+        <p>Download the Windows Installer directly from
+            <a href="https://www.google.com.sa/">nodejs.or</a>
+        </p>
         <h4>macOS</h4>
         <p class="backdropFP">brew install node</p>
         <p class="bb">Linux</p>
         <p class="bb">Debian and Ubuntu based Linux distributions:</p>
         <p class="backdropFP">curl -sL https : //deb. nodesource .com/setup_6.x &nbsp; | &nbsp; sudo -E bash - sudo apt-get install -y nodejs</p>
         <h3>Guides</h3>
-        <p>Articles and tutorails about Node.js are <a href="https://www.google.com.sa/">available here</a></p>
+        <p>Articles and tutorails about Node.js are
+            <a href="https://www.google.com.sa/">available here</a>
+        </p>
         <h3>Looking for guides of previous Nodejs releases?</h3>
         <table>
             <tr>
@@ -27,25 +45,38 @@
             </tr>
             <tr>
                 <td>Node.js 5.x</td>
-                <td><a href="https://www.google.com.sa/">Node.js 5.x Guide</a></td>
+                <td>
+                    <a href="https://www.google.com.sa/">Node.js 5.x Guide</a>
+                </td>
             </tr>
             <tr>
                 <td>Node.js 4.x</td>
-                <td><a href="https://www.google.com.sa/">Node.js 4.x Guide</a></td>
+                <td>
+                    <a href="https://www.google.com.sa/">Node.js 4.x Guide</a>
+                </td>
             </tr>
             <tr>
                 <td>Node.js 0.12</td>
-                <td><a href="https://www.google.com.sa/">Node.js 0.12 Guide</a></td>
+                <td>
+                    <a href="https://www.google.com.sa/">Node.js 0.12 Guide</a>
+                </td>
             </tr>
             <tr>
                 <td>Node.js 0.10</td>
-                <td><a href="https://www.google.com.sa/">Node.js 0.10 Guide</a></td>
+                <td>
+                    <a href="https://www.google.com.sa/">Node.js 0.10 Guide</a>
+                </td>
             </tr>
             <tr>
-                    <td>All other versions</td>
-                    <td><a href="https://www.google.com.sa/">Node 0.x</a></td>
+                <td>All other versions</td>
+                <td>
+                    <a href="https://www.google.com.sa/">Node 0.x</a>
+                </td>
             </tr>
         </table>
-      </div>
-    </body>
+    </div>
+
+    <script src="JC-Page-2.js"></script>
+</body>
+
 </html>
